Implementado pagina de adicionar usuario.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <title>Gerenciador de Rede de Computadores</title>
-    
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <title>Gerenciador de Rede de Computadores</title>
 
-        <link rel="stylesheet" href="static/components/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="static/css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="static/components/components-font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="static/css/matrix-style.css" />
-        <link rel="stylesheet" href="static/css/matrix-media.css" />
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet" type="text/css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="static/components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="static/components/components-font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/css/matrix-style.css" />
+    <link rel="stylesheet" href="static/css/matrix-media.css" />
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet" type="text/css">
         
-    </head>
-    <body>
+  </head>
+  <body>
 
-        <div id="app"></div>
+    <div id="app"></div>
 
-        <script src="static/components/jquery/dist/jquery.min.js"></script>
-        <script src="static/components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="static/js/matrix.js"></script>
-        <script src="static/js/bootstrap3-typeahead.min.js"></script>
-    </body>
+    <script src="static/components/jquery/dist/jquery.min.js"></script>
+    <script src="static/components/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="static/components/jquery-validation/src/localization/messages_pt_BR.js"></script>
+    <script src="static/components/jquery.uniform/dist/js/jquery.uniform.standalone.js"></script>
+
+    <script src="static/components/select2/dist/js/select2.min.js"></script>
+    <script src="static/components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
+    <script src="static/js/matrix.js"></script>
+    <script src="static/js/bootstrap3-typeahead.min.js"></script>
+    <script src="static/js/matrix.form_validation.js"></script>
+  </body>
 </html>
